--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -25,13 +25,14 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="55dp"
-            android:layout_height="30dp"
+        <Button
+            android:id="@+id/edit_profile"
+            android:layout_width="70dp"
+            android:layout_height="50dp"
             android:layout_gravity="end"
             android:text="수정"
             android:textColor="@android:color/black"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
 
@@ -207,24 +208,30 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="48dp">
 
-                <RadioButton
-                    android:id="@+id/radio_man"
-                    android:layout_width="wrap_content"
+                <RadioGroup
+                    android:id="@+id/genderGroup"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:layout_weight="1"
-                    android:text="남성"
-                    android:textSize="20sp" />
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/radio_woman"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="여성"
-                    android:textSize="20sp" />
+                    <RadioButton
+                        android:id="@+id/genderMan"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:checked="true"
+                        android:text="남자" />
+
+                    <RadioButton
+                        android:id="@+id/genderWoman"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="여자" />
+                </RadioGroup>
             </LinearLayout>
 
             <LinearLayout
