--- a/app/src/main/res/layout/recipe_item_list.xml
+++ b/app/src/main/res/layout/recipe_item_list.xml
@@ -5,73 +5,138 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_weight="1"-->
+<!--        android:orientation="horizontal">-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/recipe_imageview"-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="80dp"-->
+<!--            app:srcCompat="@drawable/ic_launcher_foreground"-->
+<!--            android:layout_marginRight="10dp"/>-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:orientation="vertical"-->
+<!--            android:layout_marginTop="5dp">-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal">-->
+<!--                <TextView-->
+<!--                    android:id="@+id/recipe_title"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:textSize="23sp"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:textColor="#000000"-->
+<!--                    android:text="TextView"-->
+<!--                    android:layout_marginBottom="10dp"/>-->
+
+<!--                <ImageButton-->
+<!--                    android:id="@+id/bookmark_button"-->
+<!--                    android:layout_width="30dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:gravity="right"-->
+<!--                    app:srcCompat="@drawable/bookmark" />-->
+<!--            </LinearLayout>-->
+
+
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal">-->
+<!--                <TextView-->
+<!--                    android:id="@+id/recipe_serving"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:textSize="15sp"-->
+<!--                    android:text="TextView"-->
+<!--                    android:layout_marginRight="20dp"/>-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/recipe_time"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:textSize="15sp"-->
+<!--                    android:text="TextView" />-->
+<!--            </LinearLayout>-->
+<!--        </LinearLayout>-->
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_width="394dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/recipe_imageview"
             android:layout_width="80dp"
-            android:layout_height="80dp"
-            app:srcCompat="@drawable/ic_launcher_foreground"
-            android:layout_marginRight="10dp"/>
+            android:layout_height="70dp"
+            android:layout_gravity="start"
+            android:src="@drawable/kimchi" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="270dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_marginTop="5dp">
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/recipe_title"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:layout_marginTop="7dp"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="text"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/recipe_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="23sp"
-                    android:textStyle="bold"
-                    android:textColor="#000000"
-                    android:text="TextView"
-                    android:layout_marginBottom="10dp"/>
 
-                <ImageButton
-                    android:id="@+id/bookmark_button"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:gravity="right"
-                    app:srcCompat="@drawable/bookmark" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/recipe_serving"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:layout_marginTop="7dp"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="text"
+                android:textColor="@android:color/darker_gray" />
 
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/recipe_serving"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:text="TextView"
-                    android:layout_marginRight="20dp"/>
-
-                <TextView
-                    android:id="@+id/recipe_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:text="TextView" />
+            <TextView
+                android:id="@+id/recipe_time"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:layout_marginTop="7dp"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="text"
+                android:textColor="@android:color/darker_gray" />
             </LinearLayout>
         </LinearLayout>
 
+        <ImageButton
+            android:id="@+id/bookmark_button"
+            android:layout_width="35dp"
+            android:layout_height="60dp"
+            android:layout_gravity="end"
+            android:src="@drawable/bookmark" />
 
     </LinearLayout>
+
+
+
 
     <TextView
         android:id="@+id/basket_underline"
